[project]
name = "face-generation-using-dcgan"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas",email = "development@waetzig.net"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "pytorch-fid (>=0.3.0,<0.4.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "contourpy (>=1.3.3,<2.0.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "filelock (>=3.18.0,<4.0.0)",
    "fonttools (>=4.59.0,<5.0.0)",
    "fsspec (>=2025.7.0,<2026.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "mpmath (>=1.3.0,<2.0.0)",
    "packaging (>=25.0,<26.0)",
    "pyparsing (>=3.2.3,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipykernel = "^6.30.0"
isort = "^6.0.1"

