[project]
name = "face-generation-using-dcgan"
version = "0.1.0"
description = "DCGAN-based face image generation project using PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pytorch-fid>=0.3.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
